--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,14 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px; /* Added padding to the sides */
+    padding: 0 20px; 
 }
-
+/*header area*/
 header {
-    background-color: #fff; /* Changed the background color */
-    padding: 20px 0;
+    background-color: #fff; 
+    padding: 10px 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.2rem;
 }
 
 header .container {
@@ -27,10 +29,21 @@ header .container {
     align-items: center;
 }
 
+header ul {
+    font-size: 1.2rem;
+}
+
 header img {
     max-width: 200px;
 }
 
+/*product images*/
+.product-images img{
+    border-radius: 20px;
+    padding: 1rem;
+}
+
+/*nav bar*/
 header nav ul {
     list-style-type: none;
 }
@@ -59,7 +72,7 @@ main {
 .product-images {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Display 2 images in each row */
-    gap: 20px;
+    gap: 0px;
 }
 
 .product-images img {
@@ -71,9 +84,10 @@ main {
     padding: 40px 0;
 }
 
-.sweethearts-affair h2 {
+.sweethearts-affair h1 {
     font-size: 2.027rem;
     font-weight: 500;
+    padding-bottom: 1rem;
 }
 
 .sweethearts-affair h3 {
@@ -82,7 +96,7 @@ main {
 }
 
 .sweethearts-affair p {
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin-bottom: 20px;
 }
 
@@ -117,15 +131,26 @@ main {
 }
 
 /* Testimonials Section */
+/* Testimonials Section */
 .testimonials {
+    display: flex;
+    justify-content: space-between; /* Adjust as needed */
+    align-items: center; /* Adjust as needed */
     padding: 40px 0;
     background-color: #000;
     margin-bottom: 20px;
     color: #fff;
 }
 
-.testimonial p {
-    font-size: 1rem;
+.testimonial {
+    border: 1px solid #ccc;
+    padding: 20px;
+    flex: 1;
+}
+
+/* Remove right margin from last testimonial to prevent overflow */
+.testimonial:last-child {
+    margin-right: 0;
 }
 
 .testimonial .author {
