--- a/css/style.css
+++ b/css/style.css
@@ -257,3 +257,13 @@ footer {
 footer p {
     text-align: center;
 }
+
+/* Media Queries */
+
+@media screen and (min-width: 768px) {
+    /* Adjust page for 768px screen size and above */
+}
+
+@media screen and (min-width: 960px) {
+    /* Adjust page for 960px screen size and above */
+}
